[IMP] Update controller
