# chapter_v/hola/src/modules/user/routes.js
@@ -1,8 +1,10 @@
 const express = require('express')
 const router = express.Router()
 
-const { signUp } = require('./controllers/index')
+const { signUp, list, update } = require('./controllers/index')
 
+router.get('/users', list)
+router.put('/user/:id', update)
 router.post('/signup', signUp)
 
 module.exports = router
